[tool.poetry]
name = "dbt_stocks"
version = "0.1.0"
description = ""
authors = ["Cory Buecker <email@corybuecker.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
dbt-bigquery = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
